--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout android:id="@+id/drawer_layout"
+<android.support.v4.widget.DrawerLayout android:id="@+id/activity_main_drawer_layout"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -8,13 +8,24 @@
 	android:fitsSystemWindows="true"
 	tools:openDrawer="start">
 	
-	<include
-		layout="@layout/app_bar_main"
+	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
+		android:layout_height="wrap_content"
+		android:orientation="vertical">
+		
+		<include
+			layout="@layout/app_bar_main"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" />
+		
+		<FrameLayout
+			android:id="@+id/activity_main_frame_layout_container"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" />
+	</LinearLayout>
 	
 	<android.support.design.widget.NavigationView
-		android:id="@+id/nav_view"
+		android:id="@+id/activity_main_nav_view"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
 		android:layout_gravity="start"
