--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -4,7 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context="com.softomate.test.languagerecognizer.MainActivity">
+	tools:context="com.softomate.test.languagerecognizer.ui.MainActivity">
 	
 	<android.support.design.widget.AppBarLayout
 		android:layout_width="match_parent"
@@ -12,7 +12,7 @@
 		android:theme="@style/AppTheme.AppBarOverlay">
 		
 		<android.support.v7.widget.Toolbar
-			android:id="@+id/toolbar"
+			android:id="@+id/app_bar_main_toolbar"
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
 			android:background="?attr/colorPrimary"
@@ -20,13 +20,4 @@
 	
 	</android.support.design.widget.AppBarLayout>
 	
-	<include layout="@layout/content_main" />
-	
-	<android.support.design.widget.FloatingActionButton
-		android:id="@+id/fab"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="bottom|end"
-		android:layout_margin="@dimen/fab_margin"/>
-
 </android.support.design.widget.CoordinatorLayout>
