--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
 	
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="match_parent"
+		android:gravity="center"
 		android:orientation="vertical">
 		
 		<include
@@ -21,7 +22,8 @@
 		<FrameLayout
 			android:id="@+id/activity_main_frame_layout_container"
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content" />
+			android:layout_height="match_parent" />
+	
 	</LinearLayout>
 	
 	<android.support.design.widget.NavigationView
@@ -31,6 +33,6 @@
 		android:layout_gravity="start"
 		android:fitsSystemWindows="true"
 		app:headerLayout="@layout/nav_header_main"
-		app:menu="@menu/activity_main_drawer" />
+		app:menu="@menu/menu_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
