--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -2,10 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	
 	<item
+		android:id="@+id/menu_drawer_new_text"
 		android:icon="@drawable/ic_add_black_36dp"
 		android:title="@string/menu_title_new_text" />
 	
 	<item
+		android:id="@+id/menu_drawer_history"
 		android:icon="@drawable/ic_restore_black_36dp"
 		android:title="@string/menu_title_history" />
 
