--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,7 @@
 	<dimen name="nav_header_vertical_spacing">16dp</dimen>
 	<dimen name="nav_header_height">160dp</dimen>
 	<dimen name="fab_margin">16dp</dimen>
-	<dimen name="item_margin">8dp</dimen>
+	<dimen name="item_margin">16dp</dimen>
 	<dimen name="item_input_text_size">16sp</dimen>
 	<dimen name="item_language_text_marginTop">6dp</dimen>
 	<dimen name="edit_text_width">300dp</dimen>
@@ -14,4 +14,5 @@
 	<dimen name="edit_text_padding">8dp</dimen>
 	<dimen name="edit_text_paddingRight">8dp</dimen>
 	<dimen name="edit_text_height_land">130dp</dimen>
+	<dimen name="item_margin_bottom">20dp</dimen>
 </resources>
